# NeoQCP

./: README.md  meson.build  meson_options.txt  qcustomplot.h.in
.github/workflows/: tests.yml
docs/architecture/: async-pipeline.md
docs/specs/: 2026-03-13-colormap2-async-resampler-design.md
examples/: meson.build
examples/axis-tags/: meson.build
examples/interactions/: meson.build
examples/plots/: meson.build
examples/scrollbar-axis-range-control/: meson.build
examples/text-document-integration/: meson.build
src/: Profiling.hpp  colorgradient.cpp  colorgradient.h  core.cpp  core.h  data-locator.cpp  datacontainer.h  global.h  item-creation-state.cpp  item.cpp  layer.cpp  layer.h  layout.cpp  layout.h  lineending.cpp  lineending.h  paintbuffer.cpp  paintbuffer.h  painter.cpp  painter.h  plottable.cpp  plottable.h  plottable1d.h  qcp.h  qcustomplot.h  scatterstyle.cpp  scatterstyle.h  selection.cpp  selection.h  selectiondecorator-bracket.cpp  selectiondecorator-bracket.h  selectionrect.cpp  selectionrect.h  vector2d.cpp  vector2d.h
src/axis/: axis.cpp  axis.h  axisticker.cpp  axisticker.h  axistickerdatetime.cpp  axistickerdatetime.h  axistickerfixed.cpp  axistickerfixed.h  axistickerlog.cpp  axistickerlog.h  axistickerpi.cpp  axistickerpi.h  axistickertext.cpp  axistickertext.h  axistickertime.cpp  axistickertime.h  labelpainter.cpp  labelpainter.h  range.cpp  range.h
src/datasource/: abstract-datasource.h  abstract-multi-datasource.h  algorithms-2d.h  algorithms.h  async-pipeline.cpp  async-pipeline.h  graph-resampler.h  histogram-binner.h  pipeline-scheduler.cpp  pipeline-scheduler.h  resample.cpp  resample.h  resampled-multi-datasource.h  row-major-multi-datasource.h  soa-datasource-2d.h  soa-datasource.h  soa-multi-datasource.h  thread-naming.h
src/items/: item-bracket.cpp  item-bracket.h  item-curve.cpp  item-curve.h  item-ellipse.cpp  item-ellipse.h  item-line.cpp  item-line.h  item-pixmap.cpp  item-pixmap.h  item-rect.cpp  item-rect.h  item-straightline.cpp  item-straightline.h  item-text.cpp  item-text.h  item-tracer.cpp  item-tracer.h  item.cpp  item.h
src/layoutelements/: layoutelement-axisrect.cpp  layoutelement-axisrect.h  layoutelement-colorscale.cpp  layoutelement-colorscale.h  layoutelement-legend-group.cpp  layoutelement-legend-group.h  layoutelement-legend.cpp  layoutelement-legend.h  layoutelement-textelement.cpp  layoutelement-textelement.h
src/painting/: colormap-renderer.cpp  colormap-renderer.h  colormap-rhi-layer.cpp  colormap-rhi-layer.h  contour-extractor.cpp  contour-extractor.h  line-extruder.cpp  paintbuffer-glfbo.cpp  paintbuffer-glfbo.h  paintbuffer-pixmap.cpp  paintbuffer-pixmap.h  paintbuffer-rhi.cpp  paintbuffer.cpp  paintbuffer.h  scatter-rhi-layer.cpp  scatter-rhi-layer.h  span-rhi-layer.cpp  viewport-offset.h
src/painting/shaders/: colormap_contour.frag  contour_line.frag  contour_line.vert  scatter.frag  scatter.vert
src/plottables/: plottable-bars.cpp  plottable-bars.h  plottable-colormap.cpp  plottable-colormap.h  plottable-colormap2.cpp  plottable-colormap2.h  plottable-curve.cpp  plottable-curve.h  plottable-errorbar.cpp  plottable-errorbar.h  plottable-financial.cpp  plottable-financial.h  plottable-graph.cpp  plottable-graph.h  plottable-graph2.cpp  plottable-graph2.h  plottable-histogram2d.cpp  plottable-histogram2d.h  plottable-multigraph.cpp  plottable-statisticalbox.cpp  plottable-statisticalbox.h  plottable-waterfall.cpp  plottable-waterfall.h  plottable.cpp  plottable1d.h
src/polar/: layoutelement-angularaxis.cpp  layoutelement-angularaxis.h  polargraph.cpp  polargraph.h  polargrid.cpp  polargrid.h  radialaxis.cpp  radialaxis.h
tests/: meson.build
tests/auto/: autotest.cpp  meson.build
tests/auto/test-colormap/: test-colormap.cpp  test-colormap.h
tests/auto/test-datacontainer/: test-datacontainer.h
tests/auto/test-datasource/: test-datasource.cpp  test-datasource.h
tests/auto/test-datasource2d/: test-datasource2d.cpp  test-datasource2d.h
tests/auto/test-line-extruder/: test-line-extruder.cpp  test-line-extruder.h
tests/auto/test-multi-datasource/: test-multi-datasource.cpp  test-multi-datasource.h
tests/auto/test-multigraph/: test-multigraph.cpp  test-multigraph.h
tests/auto/test-paintbuffer/: test-paintbuffer.cpp  test-paintbuffer.h
tests/auto/test-pipeline/: test-pipeline.cpp  test-pipeline.h
tests/auto/test-qcpaxisrect/: test-qcpaxisrect.cpp  test-qcpaxisrect.h
tests/auto/test-qcpbars/: test-qcpbars.h
tests/auto/test-qcpcurve/: test-qcpcurve.h
tests/auto/test-qcpfinancial/: test-qcpfinancial.h
tests/auto/test-qcpgraph/: test-qcpgraph.h
tests/auto/test-qcplayout/: test-qcplayout.h
tests/auto/test-qcplegend/: test-qcplegend.h
tests/auto/test-qcustomplot/: test-qcustomplot.h
tests/auto/test-scatter-rhi/: test-scatter-rhi.cpp  test-scatter-rhi.h
tests/auto/test-waterfall/: test-waterfall.cpp  test-waterfall.h
tests/benchmark/: benchmark.cpp  meson.build
tests/big_data_for_tracy/: mainwindow.cpp  mainwindow.h  meson.build
tests/manual/: meson.build
tests/manual/gallery/: main.cpp
tests/perf/: multigraph-perf.cpp
