option('tracy_enable', type : 'boolean', value : false , description : 'Enable profiling')
option('with_examples', type : 'boolean', value : false , description : 'Enable examples')
option('with_tests', type : 'boolean', value : true , description : 'Enable tests')
option('with_opengl', type : 'boolean', value : true , description : 'Enable OpenGL support')
option('enable_batch_drawing', type : 'boolean', value : true, description : 'Enable experimental batch drawing, makes OpenGL drawing more efficient')
